<resources>
    <string name="app_name">飄愛雲</string>
    <string name="about_msg">\u0020\u0020\u0020\u0020深圳市飘爱健康科技有限公司注册于深圳市前海自贸区，注册资金2000万元，股权代码：204507，是一家致力于室内外空气健康的物联网企业。公司主要从事城市智能除霾设备、智能物联网空气质量检测仪设备、室内空气健康仪、家用车用除甲醛产品等产品的研发和销售，以及基于物联网的智能城市除霾系统的研发和销售等，是国内乃至国际上首家提出智能城市除霾概念产品的企业。</string>
    <string name="about_msg2">深圳市飘爱健康科技有限公司</string>
    <string name="about_title">With regard to飘爱/關於飄愛</string>
    <string name="binding_msg">Illegal device ID, please check/n設備ID不合法,請檢查</string>
    <string name="binding_msg2">Unable to open the camera, qr code scanning failure/n相機無法打開,二維碼掃描失敗</string>
    <string name="binding_msg3">Binding equipment/n綁定設備</string>
    <string name="binding_msg4">Scan the qr code on the reverse of the equipment, or input device, the APP and binding equipment/n掃描設備背面的二維碼,或者輸入設備號,進行APP與設備的綁定</string>
    <string name="binding_msg5">Please enter the number of SN/n请输入SN号</string>
    <string name="binding_msg6">Please enter the Key/n請輸入Key</string>
    <string name="binding_msg7">configuration/配置</string>
    <string name="binding_msg8">Scan the qr code/掃描二維碼</string>
    <string name="deploy_msg">WiFi not connected/WiFi未連接</string>
    <string name="deploy_msg2">There is no WiFi connection</string>
    <string name="deploy_msg3">Whether or not to jump to WiFI Settings interface WiFI connection/n是否跳轉到WiFI設置界面連接WiFi</string>
    <string name="deploy_msg4">Is the upload server…/n正在上傳服務器…</string>
    <string name="deploy_msg5">Distribution network success/配網成功</string>
    <string name="deploy_msg7">Configuration connected to the WiFi network/配置聯網WiFi聯網</string>
    <string name="deploy_msg8">In which under the wifi network device configuration/n設備配置在哪個wifi下進行聯網</string>
    <string name="deploy_msg9">Please put the phone link wi-fi/n請將手機鏈接Wi-Fi</string>
    <string name="deploy_msg10">Current wi-fi/當前Wi-Fi:</string>
    <string name="deploy_msg11">Enter the password for wi-fi/請輸入Wi-Fi密碼</string>
    <string name="deploy_msg12">The wi-fi if there is no password, can be directly click next/n當前Wi-Fi如果沒有密碼,可以直接點擊下一步</string>
    <string name="deploy_msg13">Long press equipment WiFi key about 3 seconds/n長按設備WiFi鍵約3秒</string>
    <string name="deploy_msg6">Equipment configured timeout, please check the equipment or WIFI state/n設備配置超時，請檢查設備或WIFI狀態</string>
    <string name="equipment_msg">In the information/信息提交中…</string>
    <string name="equipment_msg2">More and more/更多</string>
    <string name="equipment_msg3">Delete/刪除</string>
    <string name="equipment_msg4">Device list/設備列表</string>
    <string name="feed_msg">And thank you for your valuable advice!/n感謝您的寶貴意見!</string>
    <string name="feed_msg2">Information feedback/信息反饋</string>
    <string name="feed_msg3">Please enter your precious opinions, we will respond in time, thank you for the support of love/n請輸入您的寶貴意見，我們將及時回應，感謝您對飄愛的支持</string>
    <string name="forget_msg">s after resend/s後重新發送</string>
    <string name="forget_msg2">Get verification code/獲取驗證碼</string>
    <string name="history_msg">Are sharing/正在分享…</string>
    <string name="history_msg2">The graph/曲線圖</string>
    <string name="history_msg3">The weather query failure/天氣查詢失敗</string>
    <string name="history_msg4">To locate failure/定位失敗</string>
    <string name="history_msg5">(min)</string>
    <string name="history_msg6">(hour)</string>
    <string name="history_msg7">(week)</string>
    <string name="history_msg8">(month)</string>
    <string name="history_msg9">PM2.5</string>
    <string name="history_msg10">PM10</string>
    <string name="history_msg11">HCHO</string>
    <string name="history_msg12">TVOC</string>
    <string name="history_msg13">CO₂</string>
    <string name="history_msg14">hours/时</string>
    <string name="history_msg15">day/天</string>
    <string name="history_msg16">weeks/周</string>
    <string name="history_msg17">month/月</string>
    <string name="history_msg18">Share the success/n分享成功啦</string>
    <string name="history_msg19">Share the failure!/分享失败啦</string>
    <string name="history_msg20">Sharing is cancelled/分享取消了</string>
    <string name="history_msg21">飘爱 detector/飄愛檢測儀</string>
    <string name="history_msg22">TEMP/溫度:</string>
    <string name="history_msg23">RH/濕度:</string>
    <string name="history_msg37">visibility/能見度:</string>
    <string name="history_msg38">UV/紫外線強度:</string>
    <string name="history_msg39">The wind speed/風速:</string>
    <string name="history_msg24">The historical record/歷史記錄</string>
    <string name="history_msg25">PM2.5When the graph/PM2.5時曲線圖</string>
    <string name="history_msg26">PM2.5</string>
    <string name="history_msg27">PM10</string>
    <string name="history_msg28">HCHO</string>
    <string name="history_msg29">TVOC</string>
    <string name="history_msg30">CO₂</string>
    <string name="history_msg31">The weather outside/室外天氣</string>
    <string name="history_msg32">μg/m³</string>
    <string name="history_msg33">NO₂</string>
    <string name="history_msg34">CO</string>
    <string name="history_msg35">O₃</string>
    <string name="history_msg36">SO₂</string>
    <string name="loading_msg">權限獲取失敗,請重新授權</string>
    <string name="login_msg">Login information is wrong/登陸信息有誤</string>
    <string name="login_msg2">This user does not exist/不存在此用戶</string>
    <string name="login_msg3">The third party logon failur/第三方登陸失敗</string>
    <string name="login_msg4">The third party on cancel/第三方登陸取消</string>
    <string name="login_msg5">Log in, please later/n登陆中,请稍后</string>
    <string name="main_msg">No binding equipment/無綁定設備</string>
    <string name="main_msg2">My device/我的設備</string>
    <string name="main_msg3">Feedback information/反饋信息</string>
    <string name="main_msg4">飘爱Shopping mall/飄愛商城</string>
    <string name="main_msg5">logout/退出登錄</string>
    <string name="maintain_msg">In the submission/提交中…</string>
    <string name="maintain_msg3">Equipment repair service/設備報修</string>
    <string name="maintain_msg2">Parameters to fill out is not correct/n參數填寫不正確</string>
    <string name="maintain_msg4">The repair man name/報修人名字</string>
    <string name="maintain_msg5">Report number of hands/報修人手機號</string>
    <string name="maintain_msg6">Device number/設備號</string>
    <string name="maintain_msg7">Repair service level/報修等級</string>
    <string name="maintain_msg8">Level 1/等級1</string>
    <string name="maintain_msg9">Level 2/等級2</string>
    <string name="maintain_msg10">Level 3/等級3</string>
    <string name="map_msg">Please enter a search keyword/請輸入搜索關鍵字</string>
    <string name="map_msg2">Are the search/正在搜索:\n</string>
    <string name="map_msg3">I’m sorry, no search to the related data/n對不起，沒有搜索到相關數據</string>
    <string name="map_msg4">Retrieval failure/檢索失敗</string>
    <string name="map_msg5">Select the address/選擇地址</string>
    <string name="map_msg6">complete/完成</string>
    <string name="map_msg7">Please enter the address/請輸入地址</string>
    <string name="modification_msg">In the information submitted/n信息提交中…</string>
    <string name="modification_msg2">Please select a device’s address/n請選擇設備所在地址</string>
    <string name="modification_msg3">The device name cannot be empty/n設備名字不能為空</string>
    <string name="modification_msg4">The device address can’t be empty/n設備地址不能為空</string>
    <string name="modification_msg5">Fault description/故障描述</string>
    <string name="modification_msg6">Modify the equipment information/n修改設備信息</string>
    <string name="modification_msg7">Note the name please input devices/n请输入设备备注名称</string>
    <string name="info_msg">Sex selection/选择性别</string>
    <string name="info_msg2">male/男</string>
    <string name="info_msg3">female/女</string>
    <string name="info_msg4">Is not set/未设置</string>
    <string name="info_msg5">email/邮箱</string>
    <string name="info_msg6">Subordinate departments/所属部门</string>
    <string name="info_msg7">position/职位</string>
    <string name="out_msg">Fine/优</string>
    <string name="out_msg2">Good/良</string>
    <string name="out_msg3">slight/轻度</string>
    <string name="out_msg4">Moderate/中度</string>
    <string name="out_msg5">severe/重度</string>
    <string name="out_msg6">Serious/严重</string>
    <string name="out_msg7">/Find清新</string>
    <string name="out_msg8">Good/较好</string>
    <string name="out_msg9">slight/较浊</string>
    <string name="out_msg10">Moderate/浑浊</string>
    <string name="out_msg11">Outdoor environment/户外环境</string>
    <string name="out_msg12">明天</string>
    <string name="out_msg13">TEMP/温度</string>
    <string name="out_msg14">RH/湿度</string>
    <string name="out_msg15">Feedback information/反馈信息</string>
    <string name="three_msg">Equipment in the binding/设备绑定中…</string>
    <string name="data_msg">PM2.5(μg/m³)</string>
    <string name="data_msg2">CO2(PPM)</string>
    <string name="data_msg3">TVOC(mg/m³)</string>
    <string name="data_msg4">HCHO/甲醛(mg/m³)</string>
    <string name="data_msg5">PM10(μg/m³)</string>
    <string name="data_msg6">mg/m³</string>
    <string name="ionic_msg">close/关</string>
    <string name="ionic_msg2">group/组</string>
    <string name="ionic_msg3">mark/号</string>
    <string name="ionic_msg4">min/最小</string>
    <string name="ionic_msg5">max/最大</string>
    <string name="ionic_msg6">open/开</string>
    <string name="for_msg">Forgot password/忘记密码</string>
    <string name="for_msg2">请输入手机号</string>
    <string name="for_msg3">请输入验证码</string>
    <string name="for_msg4">获取验证码</string>
    <string name="for_msg5">请设置密码</string>
    <string name="for_msg7">请输入密码</string>
    <string name="for_msg6">请确认密码</string>
    <string name="for_msg8">记住密码</string>
    <string name="for_msg9">记住密码</string>
    <string name="for_msg10">微信登录</string>
    <string name="for_msg12">注册</string>
    <string name="for_msg13">注册表示同意</string>
    <string name="for_msg14">注册表示同意</string>
    <string name="police_msg">故障记录</string>
    <string name="police_msg2">暂无故障报告</string>
    <string name="adapter_msg">负离子除霾设备</string>
    <string name="adapter_msg2">云检测仪TFT</string>
    <string name="adapter_msg3">负离子</string>
    <string name="scanner_msg">将二维码和条形码放入识别框</string>
    <string name="scanner_msg2">设备配置</string>
    <string name="scanner_msg3">设备编号:</string>
    <string name="scanner_msg4">进入首页</string>
    <string name="scanner_msg5">账户管理</string>
    <string name="scanner_msg6">管理员</string>
    <string name="scanner_msg7">其他账号</string>
    <string name="scanner_msg8">分享到</string>
    <string name="scanner_msg9">扫描设备</string>
    <string name="dialog_msg">配置中,请稍后…</string>
    <string name="dialog_msg2">无WiFi连接 无法继续配置该设备</string>
    <string name="dialog_msg3">操作成功</string>
    <string name="dialog_msg4">操作失败</string>
    <string name="dialog_msg5">服务器连接异常</string>
    <string name="dialog_msg6">In data update, please later\n數據更新中，請稍後</string>
    <string name="dialog_msg7">手机号输入不正确</string>
    <string name="dialog_msg8">手机号输入不正确或密码输入不一致</string>
    <string name="dialog_msg9">验证码有误</string>
    <string name="dialog_msg10">获取中</string>
    <string name="dialog_msg11">请输入</string>
    <string name="dialog_msg12">个人公司地址等信息不能为空</string>
    <string name="dialog_msg13">邮箱输入不合法</string>
    <string name="dialog_bt">确定</string>
    <string name="dialog_bt2">取消</string>
    <string name="dialog_bt3">下一步</string>
    <string name="dialog_bt4">提交</string>
    <string name="compile_title">个人信息</string>
    <string name="compile_pic">头像</string>
    <string name="compile_name">昵称</string>
    <string name="compile_address">所在地</string>
    <string name="compile_sex">性别</string>
    <string name="compile_phone">手机号</string>
    <string name="compile_height">身高</string>
    <string name="compile_weight">体重</string>
    <string name="compile_birthday">生日</string>
    <string name="compile_photo">相册</string>
    <string name="compile_camera">相机</string>
    <string name="compile_cancel">取消</string>
    <string name="compile_cancel2">搜索</string>
</resources>