<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    android:orientation="vertical"
    tools:context="com.example.yangsong.piaoai.activity.MaintainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_toolbar_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/maintain_msg3"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/iron" />

    <EditText
        android:id="@+id/maintain_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inport_et"
        android:hint="@string/maintain_msg4"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/silver_sand"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/maintain_phone_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inport_et"
        android:hint="@string/maintain_msg5"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/silver_sand"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/maintain_id_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inport_et"
        android:hint="@string/maintain_msg6"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/silver_sand"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/maintain_msg7" />

    <RadioGroup
        android:id="@+id/maintain_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/device_1"
            style="@style/setRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintain_msg8" />

        <RadioButton
            android:id="@+id/device_2"
            style="@style/setRadioButton2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/maintain_msg9" />

        <RadioButton
            android:id="@+id/device_3"
            style="@style/setRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintain_msg10" />
    </RadioGroup>

    <TextView
        android:id="@+id/maintain_address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/binding_rim"
        android:padding="10dp"
        android:text="@string/modification_msg2"
        android:textColorHint="@color/silver_sand"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inport_et">

        <EditText
            android:id="@+id/maintain_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/modification_msg5"
            android:padding="10dp"
            android:textColorHint="@color/silver_sand"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/submit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_rim"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_bt4"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
