<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_bottom_navigation"
    android:orientation="vertical"
    tools:context="com.example.yangsong.piaoai.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/inport_et"
            android:hint="@string/for_msg2"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="@color/silver_sand"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/login_psw_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inport_et"
            android:hint="@string/for_msg7"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="@color/silver_sand"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/login_jizhu_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:button="@drawable/psw_selected"
                android:checked="true"
                android:padding="8dp"
                android:text="@string/for_msg8"
                android:textColor="@color/bright_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/login_jizhu_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login_btn_tips" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_rim"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/for_msg9"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_wechat_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_register_rim"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/for_msg10"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <TextView
                android:id="@+id/login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/for_msg12"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/for_msg"
                android:textColor="@color/bright_gray"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
